--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
 
                 <!--Logo-->
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/Snazzy Paws Logo.png" 
+                    <img src="images/Snazzy%20Paws%20Logo.png" 
                     alt="Snazzy Paws Logo"
                     class="img-fluid"
                     style="max-height: 100px;">
@@ -105,67 +105,67 @@
                 <div class="row g-5 justify-content-center gallery">
 
                     <div class="col-6 col-md-3">
-                        <img src="images/Before 1.png" class="img-fluid rounded" alt="Silky terrier in bath">
+                        <img src="images/Before%201.png" class="img-fluid rounded" alt="Silky terrier in bath">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/After 1.png" class="img-fluid rounded" alt="Silky terrier after grooming">
+                        <img src="images/After%201.png" class="img-fluid rounded" alt="Silky terrier after grooming">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/Before 2.png" class="img-fluid rounded" alt="Schnauzer being dried">
+                        <img src="images/Before%202.png" class="img-fluid rounded" alt="Schnauzer being dried">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/After 2.png" class="img-fluid rounded" alt="Schnauzer after grooming">
+                        <img src="images/After%202.png" class="img-fluid rounded" alt="Schnauzer after grooming">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/Before 3.png" class="img-fluid rounded" alt="Labradoodle before grooming">
+                        <img src="images/Before%203.png" class="img-fluid rounded" alt="Labradoodle before grooming">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/After 3.png" class="img-fluid rounded" alt="Labradoodle after grooming">
+                        <img src="images/After%203.png" class="img-fluid rounded" alt="Labradoodle after grooming">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/Before 4.png" class="img-fluid rounded" alt="Chow chow being groomed">
+                        <img src="images/Before%204.png" class="img-fluid rounded" alt="Chow chow being groomed">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/After 4.png" class="img-fluid rounded" alt="Chow chow after grooming">
+                        <img src="images/After%204.png" class="img-fluid rounded" alt="Chow chow after grooming">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/Before 5.png" class="img-fluid rounded" alt="Corgi being shampooed">
+                        <img src="images/Before%205.png" class="img-fluid rounded" alt="Corgi being shampooed">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/After 5.png" class="img-fluid rounded" alt="Corgi after grooming">
+                        <img src="images/After%205.png" class="img-fluid rounded" alt="Corgi after grooming">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/Before 6.png" class="img-fluid rounded" alt="Maltese before grooming">
+                        <img src="images/Before%206.png" class="img-fluid rounded" alt="Maltese before grooming">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/After 6.png" class="img-fluid rounded" alt="Maltese after grooming">
+                        <img src="images/After%206.png" class="img-fluid rounded" alt="Maltese after grooming">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/Before 7.png" class="img-fluid rounded" alt="Pomeranian deshedding">
+                        <img src="images/Before%207.png" class="img-fluid rounded" alt="Pomeranian deshedding">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/After 7.png" class="img-fluid rounded" alt="Pomeranian after grooming">
+                        <img src="images/After%207.png" class="img-fluid rounded" alt="Pomeranian after grooming">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/Before 8.png" class="img-fluid rounded" alt="Husky in bath">
+                        <img src="images/Before%208.png" class="img-fluid rounded" alt="Husky in bath">
                     </div>
 
                     <div class="col-6 col-md-3">
-                        <img src="images/After 8.png" class="img-fluid rounded" alt="Husky after grooming">
+                        <img src="images/After%208.png" class="img-fluid rounded" alt="Husky after grooming">
                     </div>
 
                 </div>
@@ -193,10 +193,10 @@
                             <a href="booking.html" target="_blank">Book Now</a>
                             <a href="contact.html">Contact</a>
                             <a href="https://www.instagram.com" target="_blank">
-                                <img src="images/Instagram icon.png" alt="Instagram">
+                                <img src="images/Instagram%20icon.png" alt="Instagram">
                             </a>
                             <a href="https://www.facebook.com" target="_blank">
-                                <img src="images/Facebook icon.png" alt="Facebook">
+                                <img src="images/Facebook%20icon.png" alt="Facebook">
                             </a>
                         </div>
 
