--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 <!--Logo-->
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/Snazzy Paws Logo.png" 
+                    <img src="images/Snazzy%20Paws%20Logo.png" 
                     alt="Snazzy Paws Logo"
                     class="img-fluid"
                     style="max-height: 100px;">
@@ -56,7 +56,7 @@
 
             <!--Banner-->
             <div class="container-fluid p-0 pb-3">
-                <img src="images/Snazzy Paws Banner.png"
+                <img src="images/Snazzy%20Paws%20Banner.png"
                 alt="Snazzy Paws Banner"
                 class="img-fluid w-100">
             </div>
@@ -66,7 +66,7 @@
                 <div class="row align-items-center g-1 certificates">
 
                     <div class="col-md-4 text center">
-                        <img src="images/Christmas Dog.png"
+                        <img src="images/Christmas%20Dog.png"
                         alt="A dog wearing a Santa hat"
                         class="img-fluid rounded">
                     </div>
@@ -93,7 +93,7 @@
                     </div>
 
                     <div class="col-md-3 text-md-end">
-                        <img src="images/Drying Dog.png"
+                        <img src="images/Drying%20Dog.png"
                         alt="Dog being dried after grooming"
                         class="img-fluid rounded">
                     </div>
@@ -109,7 +109,7 @@
                 <div class="row align-items-center">
 
                     <div class="col-md-3 me-md-5">
-                        <img src="images/Dog in bath.png"
+                        <img src="images/Dog%20in%20bath.png"
                         alt="Dog in bath"
                         class="img-fluid rounded">
                     </div>
@@ -119,7 +119,7 @@
 
                         <!-- Reason item -->
                         <div class="d-flex align-items-center mb-4">
-                            <img src="images/Reason One.png"
+                            <img src="images/Reason%20One.png"
                             alt="Experienced and caring groomers"
                             class="me-3"
                             style="width: 50px; height: 50px;">
@@ -132,7 +132,7 @@
                         </div>
 
                         <div class="d-flex align-items-center mb-4">
-                            <img src="images/Reason Two.png"
+                            <img src="images/Reason%20Two.png"
                             alt="Personalised grooming"
                             class="me-3"
                             style="width: 50px; height: 50px;">
@@ -145,7 +145,7 @@
                         </div>
 
                         <div class="d-flex align-items-center mb-4">
-                            <img src="images/Reason Three.png"
+                            <img src="images/Reason%20Three.png"
                             alt="Stress-free environment"
                             class="me-3"
                             style="width: 50px; height: 50px;">
@@ -158,7 +158,7 @@
                         </div>
 
                         <div class="d-flex align-items-center mb-4">
-                            <img src="images/Reason Four.png"
+                            <img src="images/Reason%20Four.png"
                             alt="Premium products"
                             class="me-3"
                             style="width: 50px; height: 50px;">
@@ -171,7 +171,7 @@
                         </div>
 
                         <div class="d-flex align-items-center mb-4">
-                            <img src="images/Reason Five.png"
+                            <img src="images/Reason%20Five.png"
                             alt="Convenient booking"
                             class="me-3"
                             style="width: 50px; height: 50px;">
@@ -184,7 +184,7 @@
                         </div>
 
                         <div class="d-flex align-items-center">
-                            <img src="images/Reason Six.png"
+                            <img src="images/Reason%20Six.png"
                             alt="Local trusted team"
                             class="me-3"
                             style="width: 50px; height: 50px;">
@@ -264,10 +264,10 @@
                             <a href="booking.html" target="_blank">Book Now</a>
                             <a href="contact.html">Contact</a>
                             <a href="https://www.instagram.com" target="_blank">
-                                <img src="images/Instagram icon.png" alt="Instagram">
+                                <img src="images/Instagram%20icon.png" alt="Instagram">
                             </a>
                             <a href="https://www.facebook.com" target="_blank">
-                                <img src="images/Facebook icon.png" alt="Facebook">
+                                <img src="images/Facebook%20icon.png" alt="Facebook">
                             </a>
                         </div>
 
