--- a/privacy.html
+++ b/privacy.html
@@ -19,7 +19,7 @@
 
                 <!--Logo-->
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/Snazzy Paws Logo.png" 
+                    <img src="images/Snazzy%20Paws%20Logo.png" 
                     alt="Snazzy Paws Logo"
                     class="img-fluid"
                     style="max-height: 100px;">
@@ -158,6 +158,8 @@
                 </div>
             </div>
 
+        </main>
+
         <!--Footer-->
         <footer class="footer-bg text-dark mt-5">
             <div class="container py-4">
@@ -177,10 +179,10 @@
                             <a href="booking.html" target="_blank">Book Now</a>
                             <a href="contact.html">Contact</a>
                             <a href="https://www.instagram.com" target="_blank">
-                                <img src="images/Instagram icon.png" alt="Instagram">
+                                <img src="images/Instagram%20icon.png" alt="Instagram">
                             </a>
                             <a href="https://www.facebook.com" target="_blank">
-                                <img src="images/Facebook icon.png" alt="Facebook">
+                                <img src="images/Facebook%20icon.png" alt="Facebook">
                             </a>
                         </div>
 
