--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
 
                 <!--Logo-->
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/Snazzy Paws Logo.png" 
+                    <img src="images/Snazzy%20Paws%20Logo.png" 
                     alt="Snazzy Paws Logo"
                     class="img-fluid"
                     style="max-height: 100px;">
@@ -69,7 +69,7 @@
                     </div>
 
                     <div class="col-md-3 text-md-end mb-5">
-                        <img src="images/Dog in bow tie.png"
+                        <img src="images/Dog%20in%20bow%20tie.png"
                         alt="Dog in bow tie"
                         class="img-fluid rounded">
                     </div>
@@ -269,7 +269,7 @@
 
                     <div class="col-md-4 mb-5">
                         <div class="card h-100 text-center shadow-sm">
-                            <img src="images/Reason One.png" class="card-img-top mx-auto mt-3" style="width:100px;" alt="First step">
+                            <img src="images/Reason%20One.png" class="card-img-top mx-auto mt-3" style="width:100px;" alt="First step">
                             <div class="card-body">
                                 <h3 class="card-title">Clean and Prep</h3>
                                 <p class="card-text fst-italic">Your dog starts with a gentle brush-out and a relaxing bath using high-quality shampoos suited to their coat. 
@@ -280,7 +280,7 @@
 
                     <div class="col-md-4 mb-5">
                         <div class="card h-100 text-center shadow-sm">
-                            <img src="images/Reason Two.png" class="card-img-top mx-auto mt-3" style="width:100px;" alt="Second step">
+                            <img src="images/Reason%20Two.png" class="card-img-top mx-auto mt-3" style="width:100px;" alt="Second step">
                             <div class="card-body">
                                 <h3 class="card-title">Groom and Care</h3>
                                 <p class="card-text fst-italic">This includes a tidy or full haircut (based on your preference or breed standard), nail trimming, and ear cleaning. 
@@ -291,7 +291,7 @@
 
                     <div class="col-md-4 mb-5">
                         <div class="card h-100 text-center shadow-sm">
-                            <img src="images/Reason Three.png" class="card-img-top mx-auto mt-3" style="width:100px;" alt="Third step">
+                            <img src="images/Reason%20Three.png" class="card-img-top mx-auto mt-3" style="width:100px;" alt="Third step">
                             <div class="card-body">
                                 <h3 class="card-title">Fluff and Finish</h3>
                                 <p class="card-text fst-italic">We give your dog a final brush, add any requested finishing touches, and make sure they look and feel amazing. 
@@ -404,10 +404,10 @@
                             <a href="booking.html" target="_blank">Book Now</a>
                             <a href="contact.html">Contact</a>
                             <a href="https://www.instagram.com" target="_blank">
-                                <img src="images/Instagram icon.png" alt="Instagram">
+                                <img src="images/Instagram%20icon.png" alt="Instagram">
                             </a>
                             <a href="https://www.facebook.com" target="_blank">
-                                <img src="images/Facebook icon.png" alt="Facebook">
+                                <img src="images/Facebook%20icon.png" alt="Facebook">
                             </a>
                         </div>
 
