--- a/coming-soon.html
+++ b/coming-soon.html
@@ -19,7 +19,7 @@
 
                 <!--Logo-->
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/Snazzy Paws Logo.png" 
+                    <img src="images/Snazzy%20Paws%20Logo.png" 
                     alt="Snazzy Paws Logo"
                     class="img-fluid"
                     style="max-height: 100px;">
